// TripWire alert service proto3 definition.
//
// Compile with:
//   protoc --go_out=. --go_opt=paths=source_relative \
//          --go-grpc_out=. --go-grpc_opt=paths=source_relative \
//          proto/alert.proto
syntax = "proto3";

package alert;

option go_package = "github.com/tripwire/agent/proto/alert";

// AlertService is the gRPC service implemented by the TripWire dashboard
// server and consumed by each TripWire agent.
service AlertService {
  // StreamAlerts is a client-streaming RPC: the agent pushes AgentEvent
  // messages; the server replies with a ServerCommand per event.
  rpc StreamAlerts(stream AgentEvent) returns (stream ServerCommand);

  // RegisterAgent records the agent's identity with the dashboard and
  // returns its canonical host_id.
  rpc RegisterAgent(RegisterRequest) returns (RegisterResponse);
}

// AgentEvent is a single alert generated by a watcher on the monitored host.
message AgentEvent {
  // alert_id is a client-generated UUID for idempotent replay support.
  string alert_id = 1;
  // host_id is the dashboard-assigned UUID for this agent (empty on first
  // send, before RegisterAgent completes).
  string host_id = 2;
  // timestamp_us is the Unix epoch in microseconds when the event occurred
  // on the agent's clock.
  int64 timestamp_us = 3;
  // tripwire_type is one of "FILE", "NETWORK", or "PROCESS".
  string tripwire_type = 4;
  // rule_name is the human-readable name of the TripwireRule that fired.
  string rule_name = 5;
  // event_detail_json is an opaque JSON blob carrying type-specific metadata
  // (file path, port number, process name, etc.).
  bytes event_detail_json = 6;
  // severity is one of "INFO", "WARN", or "CRITICAL".
  string severity = 7;
}

// RegisterRequest is sent by the agent once (or after reconnect) to
// establish its identity with the dashboard.
message RegisterRequest {
  string hostname      = 1;
  string platform      = 2;
  string agent_version = 3;
}

// RegisterResponse carries the dashboard-assigned host_id and the server
// clock so the agent can compensate for clock skew.
message RegisterResponse {
  string host_id        = 1;
  int64  server_time_us = 2;
}

// ServerCommand is the per-event response sent back to the agent.
// For now it carries an ACK or an error description.
message ServerCommand {
  string type    = 1;
  bytes  payload = 2;
}
